--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,1 +1,22 @@
 @import 'customer';
+
+.user-select {
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  -o-user-select:none;
+  user-select:none;
+}
+
+.disable {
+  background-size: 26px 26px;
+  background-color: rgba(31, 2, 30, .3);
+  background-image: linear-gradient( 
+    45deg,
+     rgba(255, 255, 255, .3) 25%, 
+    transparent 25%, 
+    transparent 50%,
+  rgba(255, 255, 255, .3) 50%,
+  rgba(255, 255, 255, .3) 75%,
+    transparent 75%,
+    transparent);
+}
