add point remark function

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,5 +1,9 @@
 @import 'customer';
 
+.app-header {
+  background-color: #282c34;
+}
+
 .user-select {
   -webkit-user-select:none;
   -moz-user-select:none;
